--- a/src/styles/sass/components/postevent/_subscriberinput.sass
+++ b/src/styles/sass/components/postevent/_subscriberinput.sass
@@ -9,6 +9,10 @@
         cursor: text
         top: 0
         left: 4px
+    @mixin span
+        + span
+            width: 13em
+            transition: width 250ms ease-in-out
     align-items: center
     font-size: 2.2rem
     &__form
@@ -21,25 +25,25 @@
             box-sizing: border-box
             padding-bottom: .15vh
             align-items: center
-            text-align: center
             background: transparent
             border: 0
-            border-bottom: 2px solid #711F73
             color: white
             width: 13em
-            &:after
-                border-bottom: 1px solid #af2f38
-                transition: width .5s ease
-                width: 0
-            &:focus:after
-                border-bottom: 1px solid #af2f38
-                width: 13em
+            outline: 0
             &:focus
-                outline: 0
-                + label
+                ~ label
                     visibility: hidden
                     opacity: 0
-                    transition: visibility 0s ease-out 300ms, opacity 300ms
+                    transition: visibility 0s ease 300ms, opacity 300ms
+                @include span
+            &:hover
+                @include span
+        &_underline
+            display: block
+            position: absolute
+            border-bottom: 2px solid #711F73
+            width: 0
+            transition: width 250ms ease-in-out
         &_label
             @include label
         &_labelhidden
